[package]
name = "aoc25"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ahash = "0.8.12"
grid = "1.0.0"
nom = "8.0.0"
num = "0.4.3"
itertools = "0.14.0"

[dev-dependencies]
criterion = "0.8.0"

[[bench]]
name = "bench01"
harness = false

[[bench]]
name = "bench02"
harness = false

[[bench]]
name = "bench03"
harness = false

[[bench]]
name = "bench04"
harness = false