[package]
name = "aoc25"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
ahash = "0.8.12"
grid = "1.0.0"
nom = "8.0.0"
num = "0.4.3"
itertools = "0.14.0"

[dev-dependencies]
divan = "0.1.21"

[[bench]]
name = "day01"
harness = false

[[bench]]
name = "day02"
harness = false

[[bench]]
name = "day03"
harness = false

[[bench]]
name = "day04"
harness = false

[[bench]]
name = "day05"
harness = false

[[bench]]
name = "day06"
harness = false

[[bench]]
name = "day07"
harness = false